  + new funciton balances()
  + addLR, cenLR with optional different base in logrithm
  + isomLR with more possibilites for a normalizing constant
  + isomLR depricated, using now pivotCoord instead
  + isomLRinv depricated, using pivotCoordInv instead
  + orthbasis() now returns also the basis vectors
  + bug in aDist solved
  + aDist now much faster
  + new function center()

Changes in robCompositions version 2.0.2
  + new function balZav()
  + new function daCoDa()
  + new function clustCoDa()
  + new function corCoDa()
  + aDist for single matrix
  + pcaCoDa() with external variables
  + new data set alcoholreg 
  + new data set alcohol
  + new data set econom        y
  + new data set ageCatWorld
  + new data set election
  + new data set laborForce
  + new data set payments

Changes in robCompositions version 2.0.1
  + discriminant analysis (daFisher) for n-group case
  + discriminant analysis (daFisher) including predict
  + discriminant analysis (daFisher) including misclassification rates

Changes in robCompositions version 2.0.0
  + combined help for some S3methods
  + function robVariation is now called variation
  + new data sets

Changes in robCompositions version 1.9.1
  + now with roxygen2 documentation
  + minor modifications in impRZilr

Changes in robCompositions version 1.9.0
  + bug in robVariations solved

Changes in robCompositions version 1.8.0
  + critical bug in function impRZilr solved (did worked only correct
       for constant sum data)

Changes in robCompositions version 1.7.0
  + bug in function impRZilr solved
  + new bootstrap procedure for estimating the number of components within impRZilr
  + description in function impRZilr adapted

Changes in robCompositions version 1.6.4
  + deprecated functions alr, ilr, clr, invalr, invilr, invclr deleted
  + bugfix and enhancement of impRZilr.R
  + improvement of isomLR for high-dimensional data

Changes in robCompositions version 1.6.3

	+ function impAll included.